--- a/style.css
+++ b/style.css
@@ -85,3 +85,14 @@ header-text h1 span{
 .header-text h1 span{
     color: #ff004f;
 }
+/*-----------about----------*/
+#about{
+    padding: 80px 0;
+    color: #ababab;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+}
