adjusted about image

--- a/style.css
+++ b/style.css
@@ -94,5 +94,13 @@ header-text h1 span{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    
+
 }
+.about-col-1{
+    flex-basis: 35%;
+}
+.about-col-1 img{
+    width:  100%;
+    border-radius: 15px;
+}
+
