--- a/style.css
+++ b/style.css
@@ -103,7 +103,10 @@ header-text h1 span{
     width:  100%;
     border-radius: 15px;
 }
-.sub-tittlw{
+.about-col-2{
+    flex-basis: 60%;
+}
+.sub-tittle{
     font-size: 60%;
     font-weight: 600;
     color: #fff;
