--- a/style.css
+++ b/style.css
@@ -139,3 +139,21 @@ header-text h1 span{
 .tab-links.active-link::after{
     width:50%;
 }
+
+---------for red underline under experience not working ----------
+
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+}
+ab-contents ul li span{
+    color: #b54769;
+    font-size: 14px;
+}
+
+-------
+
+-----portfolio---
+#Portfolio{
+    padding: 50px 0;
+}
