--- a/style.css
+++ b/style.css
@@ -92,25 +92,31 @@ header-text h1 span{
 }
 .row{
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content:safe;
+    flex-wrap:wrap;
+
 
 }
 .about-col-1{
     flex-basis: 35%;
 }
 .about-col-1 img{
-    width:  100%;
-    border-radius: 15px;
+  width: 100%;
+  border-radius: 15%;
+
+
 }
 .about-col-2{
     flex-basis: 60%;
 }
 .sub-tittle{
-    font-size: 60%;
-    font-weight: 600;
-    color: #fff;
+font-size: 60px;
+font-weight: 600;
+color:#fff;
+
 }
+
+
 
 .tab-tittle{
     display: flex;
