--- a/style.css
+++ b/style.css
@@ -155,3 +155,25 @@ flex-wrap:wrap;
 .tab-contents.active-tab{
     display:block;
 }
+/*-------portfolio------*/
+#portfolio{
+    padding: 50px 0;
+     
+}
+.work-list{
+    display:grid;
+    grid-template-columns: repeat(autofit,minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+.work{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.work img{
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+
+}
