--- a/style.css
+++ b/style.css
@@ -161,8 +161,8 @@ flex-wrap:wrap;
      
 }
 .work-list{
-    display:grid;
-    grid-template-columns: repeat(autofit,minmax(250px, 1fr));
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
